# erender

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  cpprender  makefile
source/: Bitmap.cpp  Matrix4f.cpp  ObjModel.cpp  ObjModel.h  Render.h  main.cpp
src/: Bitmap.cpp  Bitmap.h  Matrix4f.h  ObjModel.cpp  ObjModel.h  Render.cpp  Vector4f.cpp  Vector4f.h  Vertice.cpp  Vertice.h  main.cpp
